# SpaceInvaders-Bot-Cpp

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Makefile  Spacebot.vcxproj  Spacebot.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cppbot.sln  cppbot.vcxproj  cppbot.vcxproj.filters  run.bat  run.sh  test.sh
include/: alien.h  enemy_bullet.h  game_entity.h  game_state.h  move.h  player_missile.h  shield.h  spacebot.h  spaceship.h
src/: alien.cpp  enemy_bullet.cpp  game_entity.cpp  game_state.cpp  main.cpp  player_missile.cpp  shield.cpp  spacebot.cpp  spaceship.cpp
test/: game_state.cpp
